@@ -56,6 +56,7 @@ Ross Lawley
 Sandra Martocchia
 Sigve Tjora
 Stan Hu
+Stefan Behnel
 Steve Leonard
 Titus Brown
 Zooko Wilcox-O'Hearn
